Added security functionality for when a user registers for the first time; will require them to verify the email address they provided. If a user tries to login without verifying first, it will inform them to enter the code or it will provide option to resend new one. Registration will also check for if email address is already in use.

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "cricri/zombies",
     "description": "This is a zombie survival game made with PHP and love.",
     "require": {
-	"facebook/graph-sdk" : "~5.0"
+	"facebook/graph-sdk" : "~5.0",
+        "phpmailer/phpmailer": "^6.1"
      }
 }
